--- a/assets/css/style_returnal.css
+++ b/assets/css/style_returnal.css
@@ -14,7 +14,8 @@
 .legend{
     background-image: linear-gradient(#000000ad, #00000000), url("https://gmedia.playstation.com/is/image/SIEPDC/returnal-screen-06-ps5-15jun20-en?$1600px--t$");
     background-repeat: no-repeat;
-    background-position: cover;
+    background-size:cover ;
+    background-position: center;
     height: 700px;
   
 }
